--- a/source/SyslogSettings.page
+++ b/source/SyslogSettings.page
@@ -4,7 +4,7 @@ Title="Syslog Configuration"
 Icon="enhanced.log.png"
 ---
 <?PHP
-/* Copyright 2015, Dan Landon.
+/* Copyright 2015-2016, Dan Landon.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
