--- a/source/SyslogColorSettings.page
+++ b/source/SyslogColorSettings.page
@@ -1,8 +1,8 @@
 Menu="SyslogSettings"
 Title="Syslog Colors"
 ---
-<?PHP
-/* Copyright 2015-2016, Dan Landon.
+<?php
+/* Copyright 2015-2017, Dan Landon.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -11,9 +11,7 @@ Title="Syslog Colors"
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
  */
-?>
 
-<?PHP
 $enhanced_log_cfg = parse_ini_file( "/boot/config/plugins/enhanced.log/enhanced.log.cfg" );
 ?>
 
