--- a/source/SyslogCustom.page
+++ b/source/SyslogCustom.page
@@ -1,8 +1,8 @@
 Menu="SyslogSettings"
 Title="Custom Syslog Match"
 ---
-<?PHP
-/* Copyright 2015-2016, Dan Landon
+<?php
+/* Copyright 2015-2017, Dan Landon
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
