--- a/source/SyslogEnhanced.page
+++ b/source/SyslogEnhanced.page
@@ -1,11 +1,11 @@
 Menu="UNRAID-OS"
 Title="System Log"
-Icon="enhanced.log.png"
+Icon="check-square"
 ---
 <?php
 /* Copyright 2015-2016, Lime Technology
  * Copyright 2015-2016, Bergware International.
- * Copyright 2015-2017, Dan Landon
+ * Copyright 2015-2019, Dan Landon
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
