--- a/source/EnhancedSyslogFilter.page
+++ b/source/EnhancedSyslogFilter.page
@@ -14,7 +14,7 @@ Title="Syslog Filter"
 ?>
 
 <table class="tablesorter shift ups">
-<thead><tr><th>Custom Syslog Match</th></tr></thead>
+<thead><tr><th>Syslog Filter Strings</th></tr></thead>
 </table>
 
 > You can filter out log entries to keep your Syslog from being overwhelmed with debig or redundant log entries.  You should only filter out log entries that you know are unnecessary or redundant.
@@ -32,11 +32,10 @@ function setDefault(form) {
   form.elements['text'].value = <?=json_encode($default_text);?>;
 }
 </script>
-<div style="width: 55%; float:left">
+<div style="width: 80%; float:left">
 	<form markdown="1" method="POST" action="/update.php" target="progressFrame">
 	<input type="hidden" name="#include" value="/webGui/include/update.file.php">
 	<input type="hidden" name="#file" value="<?=$file;?>">
-	Syslog Filter Strings:
 
 	: <textarea spellcheck="false" cols="80" rows="22" maxlength="2048" name="text" style="font-family:bitstream;width:70%"><?=$text;?></textarea>
 
